k8s/services/current/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: current
  namespace: odo-pub
  labels:
    app: current
    part-of: odo
spec:
  type: NodePort
  selector:
    app: current
  ports:
  - name: http
    port: 8080
    targetPort: http
    nodePort: 30048
    protocol: TCP
